[metadata]
name = wheelbarrow
summary = Rackspace Self-extracting Wheelhouse utility
description-file =
    README.rst
author = Rackspace Hosting
author-email = wheelbarrow-dev@rackspace.com
home-page = http://rackspace.com
    Development Status :: 5 Alpha
    Environment :: Development
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    wheelbarrow

[wheel]
universal = 1
